# strev

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  committed.toml  docker-compose.yml  lefthook.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/strev/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-amqp/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-amqp/examples/: amqp_pubsub.rs
crates/strev-amqp/src/: lib.rs  publisher.rs  subscriber.rs
crates/strev-amqp/tests/: conformance_test.rs
crates/strev-channel/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-channel/benches/: throughput.rs
crates/strev-channel/examples/: cloudevents_envelope.rs
crates/strev-channel/src/: lib.rs
crates/strev-channel/tests/: channel_test.rs  conformance_test.rs  delay_test.rs
crates/strev-cloudevents/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-cloudevents/examples/: router_cloudevents.rs
crates/strev-cloudevents/src/: codec.rs  lib.rs  publisher.rs  subscriber.rs
crates/strev-cloudevents/tests/: codec_test.rs  decorator_test.rs
crates/strev-cqrs/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-cqrs/examples/: cqrs.rs
crates/strev-cqrs/src/: bus.rs  lib.rs  processor.rs
crates/strev-cqrs/tests/: cqrs_test.rs
crates/strev-kafka/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-kafka/examples/: kafka_pubsub.rs
crates/strev-kafka/src/: lib.rs  publisher.rs  subscriber.rs
crates/strev-kafka/tests/: conformance_test.rs  kafka_integration_test.rs
crates/strev-mongodb/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-mongodb/examples/: mongodb_pubsub.rs
crates/strev-mongodb/src/: delay.rs  lib.rs  publisher.rs  queue_subscriber.rs  retention.rs  subscriber.rs
crates/strev-mongodb/tests/: conformance_test.rs  delay_test.rs  mongodb_integration_test.rs  queue_conformance_test.rs
crates/strev-nats/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-nats/examples/: nats_pubsub.rs
crates/strev-nats/src/: core_nats.rs  lib.rs  publisher.rs  subscriber.rs
crates/strev-nats/tests/: conformance_test.rs  core_conformance_test.rs  nats_integration_test.rs
crates/strev-postgres/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-postgres/examples/: postgres_pubsub.rs
crates/strev-postgres/src/: delay.rs  lib.rs  publisher.rs  retention.rs  schema.rs  subscriber.rs
crates/strev-postgres/tests/: conformance_test.rs  delay_test.rs  outbox_test.rs  postgres_integration_test.rs
crates/strev-redis/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-redis/examples/: redis_pubsub.rs
crates/strev-redis/src/: delay.rs  lib.rs  marshaller.rs  publisher.rs  subscriber.rs
crates/strev-redis/tests/: conformance_test.rs  delay_test.rs  redis_integration_test.rs
crates/strev-telemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-telemetry/examples/: telemetry.rs
crates/strev-telemetry/src/: lib.rs
crates/strev-telemetry/tests/: telemetry_test.rs
crates/strev-testsuite/: CHANGELOG.md  Cargo.toml  README.md
crates/strev-testsuite/src/: lib.rs
crates/strev/examples/: basic_pubsub.rs  consumer_groups.rs  deduplication.rs  event_pipeline.rs  fanin.rs  forwarder.rs  middleware_chain.rs  poison_queue.rs  request_reply.rs  requeuer.rs  router.rs
crates/strev/src/: decorator.rs  delay.rs  error.rs  fanin.rs  forwarder.rs  handler.rs  lag.rs  lib.rs  message.rs  metadata.rs  middleware.rs  outcome.rs  publisher.rs  requestreply.rs  requeuer.rs  router.rs  stream.rs  subscriber.rs  topic.rs
crates/strev/src/middleware/: circuit_breaker.rs  correlation_id.rs  deduplicator.rs  delay_on_error.rs  duplicator.rs  ignore_errors.rs  instant_ack.rs  mod.rs  poison_queue.rs  random_fail.rs  recoverer.rs  retry.rs  throttle.rs  timeout.rs
crates/strev/tests/: builtin_middleware_test.rs  e2e_test.rs  error_test.rs  fanin_test.rs  forwarder_test.rs  handler_test.rs  message_test.rs  middleware_test.rs  new_features_test.rs  new_middleware_test.rs  recoverer_test.rs  requestreply_test.rs  requeuer_test.rs  router_integration_test.rs  router_test.rs  stream_test.rs  topic_test.rs
docs/plans/: 2026-06-20-implementation-plan.md  2026-06-20-strev-design.md
