[workspace]
resolver = "2"
members = [
    "crates/strev",
    "crates/strev-channel",
    "crates/strev-redis",
    "crates/strev-nats",
    "crates/strev-kafka",
    "crates/strev-cloudevents",
    "crates/strev-postgres",
    "crates/strev-mongodb",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/guiaramos/strev"
