[workspace]
resolver = "2"
members = [
    "crates/strev",
    "crates/strev-channel",
    "crates/strev-redis",
    "crates/strev-nats",
    "crates/strev-kafka",
    "crates/strev-cloudevents",
    "crates/strev-postgres",
    "crates/strev-mongodb",
    "crates/strev-telemetry",
    "crates/strev-testsuite",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/guiaramos/strev"
