[package]
name = "strev-amqp"
version.workspace = true
edition.workspace = true
description = "AMQP (RabbitMQ) backend for strev"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["messaging", "pubsub", "amqp", "rabbitmq"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
lapin = "2"
strev = { path = "../strev", version = "0.8.1" }
tokio = { version = "1", features = ["sync", "time"] }
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
tracing = "0.1"

[dev-dependencies]
strev-testsuite = { path = "../strev-testsuite" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
