[package]
name = "strev-channel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
dashmap = "6"
strev = { path = "../strev" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
bytes = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
