[package]
name = "strev-channel"
version = "0.1.0"
edition = "2024"
description = "In-memory channel backend for strev"
license = "MIT"

[dependencies]
async-trait = "0.1"
dashmap = "6"
strev = { path = "../strev" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
bytes = "1"
cloudevents-sdk = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
