[package]
name = "strev-channel"
version.workspace = true
edition.workspace = true
description = "In-memory channel backend for strev"
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
dashmap = "6"
strev = { path = "../strev", version = "0.4.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
bytes = "1"
strev-testsuite = { path = "../strev-testsuite" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
