[package]
name = "strev-cloudevents"
version = "0.1.0"
edition = "2024"
description = "CloudEvents enveloping decorators for strev"
license = "MIT"
keywords = ["messaging", "pubsub", "cloudevents", "eventing"]

[dependencies]
async-trait = "0.1"
bytes = "1"
cloudevents-sdk = "0.8"
serde_json = "1"
strev = { path = "../strev" }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
strev-channel = { path = "../strev-channel" }
bytes = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
