[package]
name = "strev-cloudevents"
version.workspace = true
edition.workspace = true
description = "CloudEvents enveloping decorators for strev"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["messaging", "pubsub", "cloudevents", "eventing"]

[dependencies]
async-trait = "0.1"
bytes = "1"
cloudevents-sdk = "0.8"
serde_json = "1"
strev = { path = "../strev", version = "0.8.0" }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
strev-channel = { path = "../strev-channel" }
bytes = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
