[package]
name = "strev-cqrs"
version.workspace = true
edition.workspace = true
description = "CQRS command/event buses and processors for strev"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["messaging", "pubsub", "cqrs", "eventing"]

[dependencies]
async-trait = "0.1"
bytes = "1"
serde = "1"
serde_json = "1"
strev = { path = "../strev", version = "0.8.1" }
thiserror = "2"
uuid = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
strev-channel = { path = "../strev-channel" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
