[package]
name = "strev-nats"
version.workspace = true
edition.workspace = true
description = "NATS JetStream backend for strev"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["messaging", "pubsub", "nats", "jetstream"]

[dependencies]
async-nats = "0.38"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strev = { path = "../strev", version = "0.6.0" }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
strev-testsuite = { path = "../strev-testsuite" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
