[package]
name = "strev-postgres"
version.workspace = true
edition.workspace = true
description = "PostgreSQL backend for strev"
license.workspace = true
repository.workspace = true
keywords = ["messaging", "pubsub", "postgres", "sql"]

[dependencies]
async-trait = "0.1"
bytes = "1"
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "json"] }
strev = { path = "../strev", version = "0.5.0" }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
strev-testsuite = { path = "../strev-testsuite" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
