[package]
name = "strev-redis"
version.workspace = true
edition.workspace = true
description = "Redis Streams backend for strev"
license.workspace = true
repository.workspace = true
keywords = ["messaging", "pubsub", "redis", "streams"]

[dependencies]
async-trait = "0.1"
bytes = "1"
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strev = { path = "../strev", version = "0.2.0" }
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
bytes = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
