[package]
name = "strev-telemetry"
version.workspace = true
edition.workspace = true
description = "Tracing and metrics middleware for strev"
license.workspace = true
repository.workspace = true
keywords = ["messaging", "pubsub", "observability", "metrics"]

[dependencies]
async-trait = "0.1"
metrics = "0.24"
strev = { path = "../strev", version = "0.4.0" }
tracing = "0.1"

[dev-dependencies]
bytes = "1"
metrics-util = "0.19"
strev-channel = { path = "../strev-channel", version = "0.4.0" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
