[package]
name = "strev"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
strev-channel = { path = "../strev-channel" }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = "0.7"
bytes = "1"
